# backend

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml  innotugrid_arch_notes.md
assets/: .~lock.inno2grid_all_data_cleaned_and_aligned.csv#  2019_inno2grid_all_data_cleaned_and_aligned.csv  2020_inno2grid_all_data_cleaned_and_aligned.csv  inno2grid_all_data_cleaned_and_aligned.csv  inno2grid_all_data_cleaned_and_aligned.meta.yaml
documentation/: inno2grid_api_documentation.yaml
initdb/: init.sql
migrations/: 20231108162728_create_timeseries_table.up.sql  20231117111506_create_metadata_table.down.sql  20231117111506_create_metadata_table.up.sql  20231117111548_create_timeseries_table.down.sql  20231117111548_create_timeseries_table.up.sql  20231117111724_add_timescaledb_and_create_hypertable_for_ts.up.sql  20231129125030_add_microgrid_identifier_column_to_metadata_table.down.sql  20231129125030_add_microgrid_identifier_column_to_metadata_table.up.sql  20231206125747_create_table_for_emission_factors_by_carrier.down.sql  20231206125747_create_table_for_emission_factors_by_carrier.up.sql  20231208092830_add_initial_set_of_emission_factors.up.sql  20240121213453_add_config_table.down.sql  20240121213453_add_config_table.up.sql  20240129091400_add_updated_trigger_to_config_table.down.sql  20240129091400_add_updated_trigger_to_config_table.up.sql  20240129104711_add_description_field_to_meta.down.sql  20240129104711_add_description_field_to_meta.up.sql  20240129165414_add_unique_constraint_for_timestamp_and_meta_identifier_to_ts_table.down.sql  20240129165414_add_unique_constraint_for_timestamp_and_meta_identifier_to_ts_table.up.sql  20240205143443_add_local_flag_to_meta.down.sql  20240205143443_add_local_flag_to_meta.up.sql  (+7 more)
scripts/: init-db.sh
services/scraping-service/: Dockerfile  README.md  env.py  pyproject.toml  pypsa.py  scraper.py  smard.py
(+42 files in other folders)
