[package]
name = "inno2grid-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
sqlx = { version =  "0.7.2" , features = ["postgres", "runtime-tokio"]}
tokio = { version = "1.33.0", features = ["full"] }
dotenv = "0.15.0"
#hyper = { version = "0.14.27", features = ["full"] }
#tower = "0.4.13"
#tokio-postgres = "0.7.10"