[package]
name = "inno2grid-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#axum = "0.6.20"
axum = { version = "0.6.20", features = ["multipart"]}
sqlx = { version =  "0.7.2" , features = ["postgres", "runtime-tokio", "time",]}
tokio = { version = "1.33.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.192", features = [] }
serde_json = "1.0.108"
anyhow = "1.0.75"
thiserror = "1.0.50"
axum-extra = "0.8.0"
time = { version = "0.3.30",  features = ["formatting", "parsing", "serde"]}
futures = "0.3.29"
regex = "1.10.2"
reqwest = {version = "0.11.22", features = ["json"]}
axum-test-helper = "0.3.0"
csv-async = "1.2.6"
#hyper = { version = "0.14.27", features = ["full"] }
#tower = "0.4.13"
#tokio-postgres = "0.7.10"