[tool.poetry]
name = "innotugrid-scraping-service"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11,<3.13"
requests = "^2.31.0"
python-dateutil = "^2.8.2"
python-dotenv = "^1.0.1"
schedule = "^1.2.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
